--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   uuid: ^4.5.0
   flutter_riverpod: ^2.5.1
   intl: ^0.19.0
+  flutter_slidable: ^3.1.1
+  fluttertoast: ^8.2.8
 
 dev_dependencies:
   flutter_test:
