--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   intl: ^0.19.0
   flutter_slidable: ^3.1.1
   fluttertoast: ^8.2.8
+  flutter_holo_date_picker: ^1.1.3
 
 dev_dependencies:
   flutter_test:
